docs: change the project name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-logger",
+  "name": "variable-checker",
   "version": "0.0.1",
-  "description": "",
+  "description": "This is simple test logger which you can use it just like console.log() for checking your variables.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
